<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joreb.gamingstore_jordi_reyes_bustos.PantallaRegistro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoNombreUsuarioPantallaRegistro"
        android:id="@+id/textoNombreUsuarioPantallaRegistro"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoNombreUsuarioPantallaRegistro"
        android:id="@+id/EditTextNombreUsuarioPantallaRegistro"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoCorreoPantallaRegistro"
        android:inputType="textEmailAddress"
        android:layout_below="@id/EditTextNombreUsuarioPantallaRegistro"
        android:id="@+id/textoCorreoPantallaRegistro"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoCorreoPantallaRegistro"
        android:id="@+id/EditTextCorreoPantallaRegistro"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoContraseñaPantallaRegistro"
        android:layout_below="@id/EditTextCorreoPantallaRegistro"
        android:id="@+id/textoContraseñaPantallaRegistro"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/textoContraseñaPantallaRegistro"
        android:id="@+id/EditTextContraseñaPantallaRegistro"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoPaisPantallaRegistro"
        android:layout_below="@id/EditTextContraseñaPantallaRegistro"
        android:id="@+id/textoPaisPantallaRegistro"
        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoPaisPantallaRegistro"
        android:id="@+id/SpinnerPaisPantallaRegistro">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoDireccionPantallaRegistro"
        android:layout_below="@id/SpinnerPaisPantallaRegistro"
        android:id="@+id/textoDireccionPantallaRegistro"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoDireccionPantallaRegistro"
        android:id="@+id/EditTextDireccionPantallaRegistro"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoCodigoPostalPantallaRegistro"
        android:id="@+id/textoCodigoPostalPantallaRegistro"
        android:layout_below="@id/EditTextDireccionPantallaRegistro"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@id/textoCodigoPostalPantallaRegistro"
        android:id="@+id/EditTextCodigoPostalPantallaRegistro"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoFechaNacimientoPantallaRgistro"
        android:layout_below="@id/EditTextCodigoPostalPantallaRegistro"
        android:id="@+id/textoFechaNacimientoPantallaRgistro"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoActivacionDatePickerPantallaRegistro"
        android:id="@+id/textoActivacionDatePickerPantallaRegistro"
        android:layout_below="@id/textoFechaNacimientoPantallaRgistro"/>



</RelativeLayout >
