<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joreb.gamingstore_jordi_reyes_bustos.PantallaSelecionPlataforma">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoPlataformaPantallaSelecionPlataforma"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/tamañoTextoSelecionDePlataforma"
        android:id="@+id/textoSelecionDePlataforma"
        />
    <ImageButton
        android:layout_width="@dimen/width_y_heightImagenBtnPantallaSelecion"
        android:layout_height="@dimen/width_y_heightImagenBtnPantallaSelecion"
        android:src="@drawable/icono_ps"
        android:layout_below="@+id/textoSelecionDePlataforma"
        android:id="@+id/btnImagenPlataformaPS4"
        android:layout_marginLeft="25dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnImagenPlataformaPS4"
        android:text="@string/TextoPS4PantallaPlataforma"
        android:layout_marginLeft="@dimen/marginLeftPantallaSelecionPlataforma"
        android:id="@+id/TextoPS4PantallaPlataforma"
        />
    <ImageButton
        android:layout_width="@dimen/width_y_heightImagenBtnPantallaSelecion"
        android:layout_height="@dimen/width_y_heightImagenBtnPantallaSelecion"
        android:layout_below="@id/TextoPS4PantallaPlataforma"
        android:src="@drawable/icono_xbox"
        android:id="@+id/btnImagenPlataformaXbox"
        android:layout_marginLeft="@dimen/marginLeftPantallaSelecionPlataformaEntreImagenes"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnImagenPlataformaXbox"
        android:text="@string/TextoXboxPantallaPlataforma"
        android:layout_marginLeft="@dimen/marginLeftPantallaSelecionPlataforma"
        android:id="@+id/textoXboxPantallaPlataforma"

        />
    <ImageButton
        android:layout_width="@dimen/width_y_heightImagenBtnPantallaSelecion"
        android:layout_height="@dimen/width_y_heightImagenBtnPantallaSelecion"
        android:layout_below="@id/textoSelecionDePlataforma"
        android:src="@drawable/icono_pc"
        android:layout_toRightOf="@id/btnImagenPlataformaPS4"
        android:layout_marginLeft="@dimen/marginLeftPantallaSelecionPlataformaEntreImagenes"
        android:id="@+id/btnImagenPlataformaPC"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnImagenPlataformaPC"
        android:text="@string/TextoPCPantallaPlataforma"
        android:layout_toRightOf="@id/TextoPS4PantallaPlataforma"
        android:layout_marginLeft="@dimen/marginLeftTextoPCPantallaSelecion"
        android:id="@+id/TextoPCPantallaPlataforma"/>
    <ImageButton
        android:layout_width="@dimen/width_y_heightImagenBtnPantallaSelecion"
        android:layout_height="@dimen/width_y_heightImagenBtnPantallaSelecion"
        android:layout_below="@id/TextoPCPantallaPlataforma"
        android:src="@drawable/icono_switch"
        android:layout_toRightOf="@id/btnImagenPlataformaPS4"
        android:layout_marginLeft="@dimen/marginLeftPantallaSelecionPlataformaEntreImagenes"
        android:id="@+id/btnImagenPlataformaSwitch"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnImagenPlataformaSwitch"
        android:layout_toRightOf="@id/textoXboxPantallaPlataforma"
        android:text="@string/TextoSWITCHPantallaPlataforma"
        android:layout_marginLeft="@dimen/marginLeftTextoSwitchPantallaSelecion"
        />

</RelativeLayout>
