<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawerLayout"
    >


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.joreb.gamingstore_jordi_reyes_bustos.PantallaPrincipal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoPantallaPrincipal"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/tamañoLetraTextoPantallaPrincipal"
        android:layout_alignParentTop="true"
        android:id="@+id/TextoNovedadesPantallaPrincipal"
         />
    <ImageView
            android:layout_width="@dimen/widthImageViewGaleriaImagenes"
            android:layout_height="@dimen/heightImageViewGaleriaImagenes"
            android:layout_marginLeft="@dimen/marginLeftImageViewGaleriaImagenes"
            android:src="@drawable/imagen_galeria_call_of_duty"
            android:id="@+id/galeriaImagenesPantallaPrincipal"
            android:layout_below="@+id/TextoNovedadesPantallaPrincipal"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Call Of Duty WW2"
            android:layout_below="@+id/galeriaImagenesPantallaPrincipal"
            android:id="@+id/TextoJuegosPantallaPrincipal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoBtnAnteriorPantallaPrincipal"
            android:id="@+id/BtnAnteriorPantallaPrincipal"
            android:layout_below="@+id/TextoJuegosPantallaPrincipal"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoBtnSiguientePantallaPrincipal"
            android:id="@+id/BtnSiguientePantallaPrincipal"
            android:layout_below="@id/TextoJuegosPantallaPrincipal"
            android:layout_toRightOf="@+id/BtnAnteriorPantallaPrincipal"/>

</RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/NavigationBar"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>